[project]
name = "jetracer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-blinka>=8.69.0",
    "adafruit-circuitpython-pca9685>=3.4.20",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "rpi-gpio>=0.7.1",
    "rpi-ws281x>=5.0.0",
]
